--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RX'
 - !lcsh 'Homeopathy -- Materia medica and therapeutics'
+- GITenberg
 title: Tratado metódico y práctico de Materia Médica y de Terapéutica, tomo segundo
 url: http://www.gutenberg.org/ebooks/29576
